Enforce JDK 8 compatibility